--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hw-08-phonebook",
+  "name": "react-hw-08-phonebooks",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://vovkatom.github.io/goit-react-hw-08-phonebook/",
